@@ -1,3 +1,9 @@
+2004-05-15 Terry <tbiggs@users.sf.net>
+
+	* revomed backend/mgr.hh and backend/mgr.cc
+	* revomed backend/sword_defs.h
+	
+	
 2004-05-14 Terry <tbiggs@users.sf.net>
 
 	* revomed backend/key.hh and backend/key.cc
